# WTF

./: CMakeLists.txt  README.md
Source/: DialsPro.h  MembersPro.h  OldWaveShaperStuff.h  PhaseTableSet.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RoutingMatrix.h  WavePad.h  WaveShaper.h  deviantPro.cpp  deviantPro.h  wtAnalyzer.h  wtRenderer.h  wtShaders.h
